修改jar模板